@@ -1,3 +1,6 @@
+RH-2009-03-02-0: Bugfix:     Hedeby: adjustments issue 618
+                 Review:     RM
+
 CR-2009-03-02-1: Bugfix:     fixed test for IZ 2895 for GE 60 versions
                  Review:     RD
 
